Finalizando cadastro de paciente

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -70,7 +70,15 @@ mat-icon.icon-side-menu {
 }
 
 .mack-white-icon {
-    padding-right: 10px;
+    padding-left: 10px;
+}
+
+.mack-white-icon:hover {
+    cursor: pointer;
+}
+
+.app-name-header:hover {
+    cursor: pointer;
 }
 
 .header-toolbar {
