--- a/src/app/patient-register/patient-register.component.html
+++ b/src/app/patient-register/patient-register.component.html
@@ -56,7 +56,7 @@
 
                     <mat-form-field>
                         <mat-label>Data de Nascimento</mat-label>
-                        <input matInput [matDatepicker]="picker" required formControlName="birthDate">
+                        <input matInput [matDatepicker]="picker" readonly (click)="picker.open()" required formControlName="birthDate">
                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                         <mat-datepicker #picker></mat-datepicker>
                     </mat-form-field>
