Mecanismo de listagem e busca de pacientes atendidos pelo fisioterapeuta conectado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
             <mat-button class="btn-side-menu" mat-list-item (click)="redirectToPatientRegister()">
                 <mat-icon class="icon-side-menu">person_add</mat-icon><span>Cadastrar Paciente</span>
             </mat-button>
-            <mat-button class="btn-side-menu" mat-list-item>
+            <mat-button class="btn-side-menu" mat-list-item (click)="redirectToPatientList()">
                 <mat-icon class="icon-side-menu">people_alt</mat-icon><span>Pacientes Cadastrados</span></mat-button>
         </mat-nav-list>
     </mat-sidenav>
