--- a/src/app/patient-list/patient-list.component.html
+++ b/src/app/patient-list/patient-list.component.html
@@ -6,7 +6,7 @@
     </mat-form-field>
 </div>
 
-<div fxLayoutAlign="center">
+<div class="patients-list" fxLayoutAlign="center center">
     <mat-card class="user-card" *ngFor="let patient of patients | patientFilter:searchTerm">
         <mat-card-header>
             <div mat-card-avatar class="header-image"></div>
