--- a/src/app/patient-list/patient-list.component.html
+++ b/src/app/patient-list/patient-list.component.html
@@ -20,6 +20,7 @@
             </p>
         </mat-card-content>
         <mat-card-actions align="end">
+            <button mat-button (click)="deletePatient()"> Excluir Paciente </button>
             <button mat-button> Nova avaliação </button>
             <button mat-button> Consultar histórico </button>
         </mat-card-actions>
