--- a/src/app/patient-list/patient-list.component.html
+++ b/src/app/patient-list/patient-list.component.html
@@ -13,6 +13,7 @@
             <div mat-card-avatar class="header-image"></div>
             <mat-card-title>{{ patient.firstName }}</mat-card-title>
             <mat-card-subtitle>{{ patient.email }} | {{ patient.telephoneNumber }}</mat-card-subtitle>
+            <mat-card-subtitle>{{ patient.active}} | {{ patient.telephoneNumber }}</mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
             <p>
@@ -20,7 +21,7 @@
             </p>
         </mat-card-content>
         <mat-card-actions align="end">
-            <button mat-button (click)="deletePatient()"> Excluir Paciente </button>
+            <button mat-button (click)="deletePatient(patient.id)"> Excluir Paciente </button>
             <button mat-button> Nova avaliação </button>
             <button mat-button> Consultar histórico </button>
         </mat-card-actions>
