Adicionando tooltip nos campos de cadastro e edição do perfil

--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -18,7 +18,7 @@
 
                     <mat-form-field>
                         <mat-label>CPF</mat-label>
-                        <input matInput placeholder="CPF" #cpf formControlName="cpf" [ngModel]="user.cpf" required>
+                        <input mask="000.000.000-00" maxlength="14" matTooltip="CPF sem pontuação" matTooltipPosition="after" matInput placeholder="CPF" #cpf formControlName="cpf" [ngModel]="user.cpf" required>
                     </mat-form-field>
                     <mat-form-field>
                         <mat-label>Email</mat-label>
@@ -27,7 +27,7 @@
 
                     <mat-form-field>
                         <mat-label>Senha</mat-label>
-                        <input matInput placeholder="**********" type="password" formControlName="password" required>
+                        <input maxlength="8" matTooltip="Entre 6 e 8 caracteres" matTooltipPosition="after" matInput placeholder="**********" type="password" formControlName="password" required>
                         <div *ngIf="!equalPass">
                             <p class="cepNF">Senhas não correspondem!</p>
                             <p class="cepNF">Minimo 6 Maximo 8 caracteres!</p>
@@ -35,7 +35,7 @@
                     </mat-form-field>
                     <mat-form-field>
                         <mat-label>Confirmar Senha</mat-label>
-                        <input matInput placeholder="Senha" (change)="validatePass()" placeholder="**********" type="password" formControlName="confirmPass" required>
+                        <input maxlength="8" matTooltip="Entre 6 e 8 caracteres" matTooltipPosition="after" matInput placeholder="Senha" (change)="validatePass()" placeholder="**********" type="password" formControlName="confirmPass" required>
                         <div *ngIf="!equalPass">
                             <p class="cepNF">Senhas não correspondem!</p>
                             <p class="cepNF">Minimo 6 Maximo 8 caracteres!</p>
@@ -44,7 +44,7 @@
 
                     <mat-form-field>
                         <mat-label>Celular</mat-label>
-                        <input matInput placeholder="Celular" formControlName="telephoneNumber" [ngModel]="user.telephoneNumber" required>
+                        <input mask="(00)00000-0000" maxlength="14" matTooltip="Com DDD" matTooltipPosition="after" matInput placeholder="Celular" formControlName="telephoneNumber" [ngModel]="user.telephoneNumber" required>
                     </mat-form-field>
                     <mat-form-field>
                         <mat-label>Gênero</mat-label>
@@ -74,7 +74,7 @@
                     <ng-template matStepLabel>Dados Residenciais</ng-template>
                     <mat-form-field>
                         <mat-label>CEP</mat-label>
-                        <input matInput placeholder="CEP" (change)="searchCEP()" [ngModel]="user.address.postalCode" formControlName="postalCode" required>
+                        <input mask="00000-000" matInput placeholder="CEP" (change)="searchCEP()" [ngModel]="user.address.postalCode" formControlName="postalCode" required>
                         <div *ngIf="cepNotFound">
                             <p class="cepNF">CEP não encontrado!</p>
                         </div>
