--- a/src/app/patient-register/patient-register.component.html
+++ b/src/app/patient-register/patient-register.component.html
@@ -1,3 +1,7 @@
+<div>
+    <p>Home > Cadastro de Paciente</p>
+</div>
+
 <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
     <mat-card class="box">
         <mat-card-header>
@@ -19,7 +23,7 @@
 
                     <mat-form-field>
                         <mat-label>CPF</mat-label>
-                        <input matInput placeholder="CPF" #cpf formControlName="cpf" required>
+                        <input mask="000.000.000-00" maxlength="14" matTooltip="CPF sem pontuação" matTooltipPosition="after" matInput placeholder="CPF" #cpf formControlName="cpf" required>
                     </mat-form-field>
                     <mat-form-field>
                         <mat-label>Email</mat-label>
@@ -28,7 +32,7 @@
 
                     <mat-form-field>
                         <mat-label>Senha</mat-label>
-                        <input matInput placeholder="Senha" type="password" formControlName="password" required>
+                        <input maxlength="8" matTooltip="Entre 6 e 8 caracteres" matTooltipPosition="after" matInput placeholder="Senha" type="password" formControlName="password" required>
                         <div *ngIf="!equalPass">
                             <p class="cepNF">Senhas não correspondem!</p>
                             <p class="cepNF">Minimo 6 Maximo 8 caracteres!</p>
@@ -36,7 +40,7 @@
                     </mat-form-field>
                     <mat-form-field>
                         <mat-label>Confirmar Senha</mat-label>
-                        <input matInput placeholder="Senha" (change)="validatePass()" type="password" formControlName="confirmPass" required>
+                        <input maxlength="8" matTooltip="Entre 6 e 8 caracteres" matTooltipPosition="after" matInput placeholder="Senha" (change)="validatePass()" type="password" formControlName="confirmPass" required>
                         <div *ngIf="!equalPass">
                             <p class="cepNF">Senhas não correspondem!</p>
                             <p class="cepNF">Minimo 6 Maximo 8 caracteres!</p>
@@ -45,7 +49,7 @@
 
                     <mat-form-field>
                         <mat-label>Celular</mat-label>
-                        <input matInput placeholder="Celular" formControlName="telephoneNumber" required>
+                        <input mask="(00)00000-0000" maxlength="14" matTooltip="Com DDD" matTooltipPosition="after" matInput placeholder="Celular" formControlName="telephoneNumber" required>
                     </mat-form-field>
                     <mat-form-field>
                         <mat-label>Gênero</mat-label>
@@ -82,7 +86,7 @@
                     <ng-template matStepLabel>Dados Residênciais</ng-template>
                     <mat-form-field>
                         <mat-label>CEP</mat-label>
-                        <input matInput placeholder="CEP" (change)="searchCEP()" formControlName="postalCode" required>
+                        <input mask="00000-000" matInput placeholder="CEP" (change)="searchCEP()" formControlName="postalCode" required>
                         <div *ngIf="cepNotFound">
                             <p class="cepNF">CEP não encontrado!</p>
                         </div>
