--- a/src/app/edit-profile/edit-profile.component.css
+++ b/src/app/edit-profile/edit-profile.component.css
@@ -181,3 +181,11 @@ textarea {
         margin-bottom: 5%;
     }
 }
+
+mat-icon.icon-side-menu {
+    vertical-align: middle;
+    padding-right: 10px;
+    padding-left: 9px;
+    position: relative;
+    top: 15px;
+}
