Adicionando componente de avaliação

--- a/src/app/patient-list/patient-list.component.html
+++ b/src/app/patient-list/patient-list.component.html
@@ -1,6 +1,6 @@
-<div class="patients-list" fxLayoutAlign="center center">
+<div class="patients-list">
 
-    <div class="form-group" fxLayoutAlign="end stretch">
+    <div class="form-group">
         <mat-form-field class="search-field" appearance="fill">
             <mat-label>Buscar Paciente</mat-label>
             <mat-icon matSuffix>search</mat-icon>
@@ -21,7 +21,7 @@
         </mat-card-content>
         <mat-card-actions align="end">
             <button mat-button (click)="deletePatient(patient.id)"> Excluir Paciente </button>
-            <button mat-button> Nova avaliação </button>
+            <button mat-button (click)="newEvaluation(patient.cpf)"> Nova avaliação </button>
             <button mat-button> Consultar histórico </button>
         </mat-card-actions>
     </mat-card>
