--- a/src/app/evaluation/evaluation.component.html
+++ b/src/app/evaluation/evaluation.component.html
@@ -1,105 +1,89 @@
-<mat-accordion fxLayoutAlign="center">
-    <!-- Fatores Ambientais -->
-    <mat-expansion-panel class="expansion-panel" (opened)="panelOpenState = true" (closed)="panelOpenState = false">
-        <mat-expansion-panel-header>
-            <mat-panel-title>
-                Fatores Ambientais
-            </mat-panel-title>
-            <mat-panel-description class="panel-description">
-                Constituem o ambiente físico, social e de atitudes em que as pessoas vivem e conduzem sua vida.
-            </mat-panel-description>
-        </mat-expansion-panel-header>
-        <mat-card>
-            <p>Constituem o ambiente físico, social e de atitudes em que as pessoas vivem e conduzem sua vida.</p>
-        </mat-card>
-    </mat-expansion-panel>
+<mat-horizontal-stepper linear="false" #stepper>
+    <mat-step [stepControl]="firstFormGroup">
+        <form [formGroup]="firstFormGroup">
+            <ng-template matStepLabel>Informações da Avaliação</ng-template>
+            <mat-card>
+                <mat-form-field>
+                    <mat-label>Name</mat-label>
+                    <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Name</mat-label>
+                    <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Name</mat-label>
+                    <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Name</mat-label>
+                    <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
+                </mat-form-field>
 
-    <!-- Atividade e Participação -->
-    <mat-expansion-panel class="expansion-panel" (opened)="panelOpenState = true" (closed)="panelOpenState = false">
-        <mat-expansion-panel-header>
-            <mat-panel-title>
-                Atividade e Participação
-            </mat-panel-title>
-            <mat-panel-description class="panel-description">
-                Execução de uma tarefa ou ação por um indivíduo e envolvimento e envolvimento numa situação da vital
-            </mat-panel-description>
-        </mat-expansion-panel-header>
-        <mat-card>
-            <p>Execução de uma tarefa ou ação por um indivíduo e envolvimento e envolvimento numa situação da vital</p>
-            <p>Quanto prejuízo a pessoa tem em ...</p>
-            <p>P = DESEMPENHO EM ...</p>
-            <p>C = CAPACIDADE EM ...</p>
-        </mat-card>
-    </mat-expansion-panel>
-
-    <!-- Estrutura do Corpo -->
-    <mat-expansion-panel class="expansion-panel" (opened)="panelOpenState = true" (closed)="panelOpenState = false">
-        <mat-expansion-panel-header>
-            <mat-panel-title>
-                Estrutura do Corpo
-            </mat-panel-title>
-            <mat-panel-description class="panel-description">
-                As estruturas do corpo são partes anatômicas do corpo, como, orgãos, membros e seus componentes
-            </mat-panel-description>
-        </mat-expansion-panel-header>
-        <mat-card>
-            <p>As estruturas do corpo são partes anatômicas do corpo, como, orgãos, membros e seus componentes</p>
-            <p>Quanto prejuízo a pessoa tem em ...</p>
-        </mat-card>
-    </mat-expansion-panel>
-
-    <!-- Funções do Corpo -->
-    <mat-expansion-panel class="expansion-panel" (opened)="panelOpenState = true" (closed)="panelOpenState = false">
-        <mat-expansion-panel-header>
-            <mat-panel-title>
-                Funções do Corpo
-            </mat-panel-title>
-            <mat-panel-description class="panel-description">
-                Funções fisiológicas dos sistema corporais (incluindo as funções psicológicas)
-            </mat-panel-description>
-        </mat-expansion-panel-header>
-        <mat-card>
-            <p>Funções fisiológicas dos sistema corporais (incluindo as funções psicológicas)</p>
-            <p>Quanto prejuízo a pessoa tem em ...</p>
-        </mat-card>
-
-        <div class="scrollable-content">
-            <mat-card>
-                <p>Funções fisiológicas dos sistema corporais (incluindo as funções psicológicas)</p>
-                <p>Quanto prejuízo a pessoa tem em ...</p>
+                <div>
+                    <button mat-button matStepperNext>Next</button>
+                </div>
             </mat-card>
-            <mat-card>
-                <p>Funções fisiológicas dos sistema corporais (incluindo as funções psicológicas)</p>
-                <p>Quanto prejuízo a pessoa tem em ...</p>
-            </mat-card>
-            <mat-card>
-                <p>Funções fisiológicas dos sistema corporais (incluindo as funções psicológicas)</p>
-                <p>Quanto prejuízo a pessoa tem em ...</p>
-            </mat-card>
-            <mat-card>
-                <p>Funções fisiológicas dos sistema corporais (incluindo as funções psicológicas)</p>
-                <p>Quanto prejuízo a pessoa tem em ...</p>
-            </mat-card>
-            <mat-card>
-                <p>Funções fisiológicas dos sistema corporais (incluindo as funções psicológicas)</p>
-                <p>Quanto prejuízo a pessoa tem em ...</p>
-            </mat-card>
-            <mat-card>
-                <p>Funções fisiológicas dos sistema corporais (incluindo as funções psicológicas)</p>
-                <p>Quanto prejuízo a pessoa tem em ...</p>
-            </mat-card>
-            <mat-card>
-                <p>Funções fisiológicas dos sistema corporais (incluindo as funções psicológicas)</p>
-                <p>Quanto prejuízo a pessoa tem em ...</p>
-            </mat-card>
-            <mat-card>
-                <p>Funções fisiológicas dos sistema corporais (incluindo as funções psicológicas)</p>
-                <p>Quanto prejuízo a pessoa tem em ...</p>
-            </mat-card>
-            <mat-card>
-                <p>Funções fisiológicas dos sistema corporais (incluindo as funções psicológicas)</p>
-                <p>Quanto prejuízo a pessoa tem em ...</p>
-            </mat-card>
+        </form>
+    </mat-step>
+    <mat-step [stepControl]="secondFormGroup">
+        <form [formGroup]="secondFormGroup">
+            <ng-template matStepLabel>Fatores Ambientais</ng-template>
+            <mat-form-field>
+                <mat-label>Address</mat-label>
+                <input matInput formControlName="secondCtrl" placeholder="Ex. 1 Main St, New York, NY" required>
+            </mat-form-field>
+            <div>
+                <button mat-button matStepperPrevious>Back</button>
+                <button mat-button matStepperNext>Next</button>
+            </div>
+        </form>
+    </mat-step>
+    <mat-step [stepControl]="secondFormGroup">
+        <form [formGroup]="secondFormGroup">
+            <ng-template matStepLabel>Atividade E Participação</ng-template>
+            <mat-form-field>
+                <mat-label>Address</mat-label>
+                <input matInput formControlName="secondCtrl" placeholder="Ex. 1 Main St, New York, NY" required>
+            </mat-form-field>
+            <div>
+                <button mat-button matStepperPrevious>Back</button>
+                <button mat-button matStepperNext>Next</button>
+            </div>
+        </form>
+    </mat-step>
+    <mat-step [stepControl]="secondFormGroup">
+        <form [formGroup]="secondFormGroup">
+            <ng-template matStepLabel>Estruturas Do Corpo</ng-template>
+            <mat-form-field>
+                <mat-label>Address</mat-label>
+                <input matInput formControlName="secondCtrl" placeholder="Ex. 1 Main St, New York, NY" required>
+            </mat-form-field>
+            <div>
+                <button mat-button matStepperPrevious>Back</button>
+                <button mat-button matStepperNext>Next</button>
+            </div>
+        </form>
+    </mat-step>
+    <mat-step [stepControl]="secondFormGroup">
+        <form [formGroup]="secondFormGroup">
+            <ng-template matStepLabel>Funções Do Corpo</ng-template>
+            <mat-form-field>
+                <mat-label>Address</mat-label>
+                <input matInput formControlName="secondCtrl" placeholder="Ex. 1 Main St, New York, NY" required>
+            </mat-form-field>
+            <div>
+                <button mat-button matStepperPrevious>Back</button>
+                <button mat-button matStepperNext>Next</button>
+            </div>
+        </form>
+    </mat-step>
+    <mat-step>
+        <ng-template matStepLabel>Done</ng-template>
+        <p>You are now done.</p>
+        <div>
+            <button mat-button matStepperPrevious>Back</button>
+            <button mat-button (click)="stepper.reset()">Reset</button>
         </div>
-    </mat-expansion-panel>
-</mat-accordion>
+    </mat-step>
+</mat-horizontal-stepper>
