Ajustando forma do formulario de avaliação

--- a/src/app/evaluation/evaluation.component.css
+++ b/src/app/evaluation/evaluation.component.css
@@ -16,6 +16,12 @@
     margin-top: 5px;
 }
 
+.main-stepper {}
+
+.mat-card {
+    display: grid;
+}
+
 @media(max-width: 768px) {
     .panel-description {
         display: none;
